LU-3783 ldlm: ldlm_flock_deadlock() ASSERTION( req != lock ) failed

Abort processing of flock blockers list
on reaching disconnected export

Change-Id: I8763dd246ef655fee6f926e49b00a7a54c720386
Xyratex-bug-id: MRP-1266
Signed-off-by: Andriy Skulysh <Andriy_Skulysh@xyratex.com>
Reviewed-on: http://review.whamcloud.com/7392
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Keith Mannthey <keith.mannthey@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>